--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exobot-adapter-discord",
+  "name": "@exoplay/exobot-adapter-discord",
   "version": "0.0.1",
   "description": "exobot adapter for discord",
   "main": "index.js",
