--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exoplay/exobot-adapter-discord",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "exobot adapter for discord",
   "main": "discord.js",
   "scripts": {
@@ -29,6 +29,6 @@
     "discord.js": "^8.0.0"
   },
   "peerDependencies": {
-    "@exoplay/exobot": "~1.0.0"
+    "@exoplay/exobot": "^1.1.3"
   }
 }
