--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@exoplay/exobot-adapter-discord",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "exobot adapter for discord",
   "main": "discord.js",
   "scripts": {
@@ -28,12 +28,12 @@
     "discord.js": "^9.0.0"
   },
   "peerDependencies": {
-    "@exoplay/exobot": ">= 2.3"
+    "@exoplay/exobot": "3.x"
   },
   "devDependencies": {
     "babel-plugin-syntax-decorators": "^6.8.0",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "@exoplay/exobot": ">= 2.3"
+    "@exoplay/exobot": "3.x"
   }
 }
