--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@exoplay/exobot-adapter-discord",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "exobot adapter for discord",
   "main": "discord.js",
   "scripts": {
-    "build": "exobot-build",
-    "watch": "exobot-build --watch"
+    "build": "exobot build -i src/discord.js -o discord.js",
+    "watch": "exobot build --watch -i src/discord.js -o discord.js"
   },
   "repository": {
     "type": "git",
@@ -24,16 +24,13 @@
   },
   "homepage": "https://github.com/exoplay/exobot-adapter-discord#readme",
   "dependencies": {
-    "@r/build": "git://github.com/ajacksified/node-build#679c3f3d47c0916237d55128ece4cc817b489ef8",
     "discord.js": "^9.0.0"
   },
   "peerDependencies": {
-    "@exoplay/exobot": "3.x"
+    "@exoplay/exobot": "4.x"
   },
   "devDependencies": {
-    "babel-plugin-syntax-decorators": "^6.8.0",
-    "babel-plugin-transform-decorators": "^6.8.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "@exoplay/exobot": "3.x"
+    "@exoplay/exobot-build": "^0.2.1",
+    "@exoplay/exobot": "4.x"
   }
 }
