Updated to new exobot build command, update to default export

--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   },
   "devDependencies": {
     "@exoplay/exobot-build": "^0.2.1",
-    "@exoplay/exobot": "4.x"
+    "@exoplay/exobot": ">= 4.1 < 5"
   }
 }
