--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "discord.js": "^9.3.0"
   },
   "peerDependencies": {
-    "@exoplay/exobot": "4.x"
+    "@exoplay/exobot": ">= 4.1 < 5"
   },
   "devDependencies": {
+    "@exoplay/exobot": ">= 4.1 < 5",
     "@exoplay/exobot-build": "^0.2.1",
-    "@exoplay/exobot": ">= 4.1 < 5"
+    "regenerator-runtime": "^0.9.6"
   }
 }
