--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@exoplay/exobot-adapter-discord",
-  "version": "3.0.0",
+  "version": "3.1.1",
   "description": "exobot adapter for discord",
   "main": "discord.js",
   "scripts": {
     "build": "exobot build -i src/discord.js -o discord.js",
-    "watch": "exobot build --watch -i src/discord.js -o discord.js"
+    "watch": "exobot build --watch -i src/discord.js -o discord.js",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "repository": {
     "type": "git",
@@ -24,14 +26,20 @@
   },
   "homepage": "https://github.com/exoplay/exobot-adapter-discord#readme",
   "dependencies": {
-    "discord.js": "^9.3.0"
-  },
-  "peerDependencies": {
-    "@exoplay/exobot": ">= 4.1 < 5"
+    "discord.js": "^9.3.0",
+    "@exoplay/exobot": ">=4.1 <5"
   },
   "devDependencies": {
-    "@exoplay/exobot": ">= 4.1 < 5",
+    "@exoplay/exobot": ">=4.1 <5",
     "@exoplay/exobot-build": "^0.2.1",
-    "regenerator-runtime": "^0.9.6"
+    "regenerator-runtime": "^0.9.6",
+    "babel-eslint": "^7.1.1",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-import-resolver-node": "^0.3.0",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0"
   }
 }
