--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "discord.js",
   "scripts": {
     "build": "exobot build -i src/discord.js -o discord.js",
-    "watch": "exobot build --watch -i src/discord.js -o discord.js"
+    "watch": "exobot build --watch -i src/discord.js -o discord.js",
+    "example": "exobot run -i example/exobot.config.js -o example/discord.example.js"
   },
   "repository": {
     "type": "git",
@@ -30,8 +31,8 @@
     "@exoplay/exobot": ">= 4.1 < 5"
   },
   "devDependencies": {
-    "@exoplay/exobot": ">= 4.1 < 5",
-    "@exoplay/exobot-build": "^0.2.1",
+    "@exoplay/exobot": "^4.1.3",
+    "@exoplay/exobot-build": "^0.2.2",
     "regenerator-runtime": "^0.9.6"
   }
 }
