--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://github.com/exoplay/exobot-adapter-discord#readme",
   "dependencies": {
-    "discord.js": "^9.3.0",
-    "@exoplay/exobot": ">=4.1 <5"
+    "@exoplay/exobot": ">=4.1 <5",
+    "discord.js": "^11.0.0",
+    "erlpack": "hammerandchisel/erlpack#master"
   },
   "devDependencies": {
     "@exoplay/exobot": ">=4.1 <5",
